--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -82,61 +82,10 @@ code {
   }
 }
 
-#main {
-  .arco-layout-sider {
-    overflow: auto;
-  }
-
-  .arco-layout-content {
-    position: relative;
-    overflow: hidden;
-  }
-
-  .arco-menu {
-    height: 100%;
-  }
-}
-
 
 .desktop {
   border: 1px solid var(--td-border-level-2-color);
 }
-
-// 重定义样式
-
-.arco-select {
-  height: 32px;
-
-  .arco-select-view-input {
-    padding-top: 0;
-  }
-}
-
-.arco-spin {
-  width: 100%;
-  height: 100%;
-}
-
-.arco-btn {
-  margin-left: 8px;
-
-  &:first-child {
-    margin-left: 0;
-  }
-}
-
-.arco-btn-group {
-  margin-left: 8px;
-
-  .arco-btn {
-    margin-left: 0;
-  }
-}
-
-.arco-drawer-container {
-  z-index: 1002 !important;
-}
-
 
 // 公共样式
 
@@ -156,12 +105,6 @@ code {
   }
 }
 
-
-.es-dialog .arco-modal-body {
-  height: calc(90vh - 48px);
-  overflow: auto;
-}
-
 .bridge {
   display: flex;
   width: 100px;
@@ -176,25 +119,25 @@ code {
 
   &[type=primary] {
     .label {
-      background-color: rgb(var(--arcoblue-6));
+      background-color: var(--td-brand-color);
     }
   }
 
   &[type=success] {
     .label {
-      background-color: rgb(var(--green-6));
+      background-color: var(--td-success-color);
     }
   }
 
   &[type=warning] {
     .label {
-      background-color: rgb(var(--orange-6));
+      background-color: var(--td-warning-color);
     }
   }
 
   &[type=error] {
     .label {
-      background-color: rgb(var(--red-6));
+      background-color: var(--td-error-color);
     }
   }
 
